Some little UI bugs in latest builds #64514

Closed
opened 2019-05-12 14:13:28 +02:00 by Chingiz Jumagulov · 8 comments

System Information
Operating system: Windows 10, 64-bits
Graphics card: Nvidia gtx 1070 8 gb vram

Blender Version
Broken: blender-2.80-ebc44aae9897-win64

Short description of error
Hello wonderful Blender developers!I have noticed several inconsistencies and bugs regarding UI of the outliner and grease pencil in latest builds.

Toggling stroke color visibility on and off for grease pencil creates black squares on top of the icons that cover them completely:

image.png

Exact steps for others to reproduce the error

Made a short video describing the problem in details:

UI_bugs.flv

**System Information** Operating system: Windows 10, 64-bits Graphics card: Nvidia gtx 1070 8 gb vram **Blender Version** Broken: blender-2.80-ebc44aae9897-win64 **Short description of error** Hello wonderful Blender developers!I have noticed several inconsistencies and bugs regarding UI of the outliner and grease pencil in latest builds. Toggling stroke color visibility on and off for grease pencil creates black squares on top of the icons that cover them completely: ![image.png](https://archive.blender.org/developer/F7031018/image.png) **Exact steps for others to reproduce the error** Made a short video describing the problem in details: [UI_bugs.flv](https://archive.blender.org/developer/F7031034/UI_bugs.flv)

Added subscriber: @MeshVoid

Added subscriber: @MeshVoid

Added subscriber: @brecht

Added subscriber: @brecht

Please create one report per bug. The first one is a duplicate of #64467, so I've removed that part.

Please create one report per bug. The first one is a duplicate of #64467, so I've removed that part.

My bad, sorry about that!

My bad, sorry about that!
Antonio Vazquez was assigned by Brecht Van Lommel 2019-05-13 22:35:38 +02:00

@brecht I'm not sure what is the reason of this. This area of code has not been changed for months and I noticed some days ago this issue (not sure when), but must be related to all icon changes done.

Actually, the icon is generated using a predefined blend file that is rendered in background, and it's the same used in preview.

If you look at the following image, you can see the icon has a background color, but the preview doesn't.

image.png

Could you take a look? maybe there are some new parameter missing in the generation.

@brecht I'm not sure what is the reason of this. This area of code has not been changed for months and I noticed some days ago this issue (not sure when), but must be related to all icon changes done. Actually, the icon is generated using a predefined blend file that is rendered in background, and it's the same used in preview. If you look at the following image, you can see the icon has a background color, but the preview doesn't. ![image.png](https://archive.blender.org/developer/F7035877/image.png) Could you take a look? maybe there are some new parameter missing in the generation.

@brecht You can find all code related in render_preview.c looking for G_pr_main_grease_pencil variable.

@brecht You can find all code related in *render_preview.c* looking for ***G_pr_main_grease_pencil*** variable.

This issue was referenced by 0ab7e78b85

This issue was referenced by 0ab7e78b85cdb08813f645ea98d028047c289492

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64514
No description provided.