Fix T64514: wrong grease pencil icon preview renders

This broken when the new Cycles/Eevee preview scene was added, make it work
the same as before for Grease Pencil now.